# axum-casbin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml  ci.yml
src/: lib.rs  middleware.rs
tests/: common.rs  test_middleware.rs  test_middleware_domain.rs  test_set_enforcer.rs
