[package]
name = "axum-casbin"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Casbin axum access control middleware"
homepage = "https://github.com/casbin-rs/axum-casbin"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "axum_casbin"
path = "src/lib.rs"

[dependencies]
casbin = { version = "2.0.9", default-features = false, features = ["incremental", "cached"] }
tokio = { version = "1.17.0", default-features = false, optional = true }
async-std = { version = "1.10.0", default-features = false, optional = true }
axum = "0.7.4"
futures = "0.3"
tower = { version = "0.4", features = ["full"] }
http = "1.0.0"
http-body = "1.0.0"
http-body-util = "0.1.0"
bytes = "1.1.0"

[features]
default = ["runtime-tokio"]

runtime-tokio = ["casbin/runtime-tokio", "tokio/sync"]
runtime-async-std = ["casbin/runtime-async-std", "async-std/std"]

[dev-dependencies]
tokio = { version = "1.17.0", features = [ "full" ] }
async-std = { version = "1.10.0", features = [ "attributes" ] }
axum-test-helpers = "0.7.5"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3

[profile.dev]
split-debuginfo = "unpacked"

