[package]
name = "axum-casbin"
version = "1.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Casbin axum access control middleware"
homepage = "https://github.com/casbin-rs/axum-casbin"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "axum_casbin"
path = "src/lib.rs"

[dependencies]
casbin = { version = "2.10.1", default-features = false, features = ["incremental", "cached"] }
tokio = { version = "1.43.0", default-features = false, optional = true }
async-std = { version = "1.13.0", default-features = false, optional = true }
axum = "0.8.1"
tower = { version = "0.5" }

[features]
default = ["runtime-tokio"]

runtime-tokio = ["casbin/runtime-tokio", "tokio/sync"]
runtime-async-std = ["casbin/runtime-async-std", "async-std/std"]

[dev-dependencies]
tokio = { version = "1.43.0", features = [ "full" ] }
async-std = { version = "1.13.0", features = [ "attributes" ] }
axum-test = "17.2.0"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3

[profile.dev]
split-debuginfo = "unpacked"

